javascript added for hamburgermenu animations

--- a/hamburgermenu/hamburger.html
+++ b/hamburgermenu/hamburger.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="hamburger.css">
+   
     <title>hamburger</title>
 </head>
 <body>
@@ -15,4 +16,5 @@
         
     </div>
 </body>
+<script src="hamburger.js"></script>
 </html>
